--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slick Slider</title>
+  <script src="https://kit.fontawesome.com/74fc9c3ac8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
-    
+  <body>  
     <div class="nav-container">
         <div class="logo">
             <img src="img/logo.png" alt="logo">
         </div>
         <ul class="nav-list">
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Works</li>
-            <li>Events</li>
-            <li>Contact</li>
+            <a href=""><li>Home</li></a>
+            <a href=""><li>About</li></a>
+            <a href=""><li>Services</li></a>
+            <a href=""><li>Works</li></a>
+            <a href=""><li>Events</li></a>
+            <a href=""><li>Contact</li></a>
         </ul>
     </div>
     <div class="slider-container">
         <div class="slide first">
             <div class="first-text">
-            <p class="first-main-text">We craft meaningful digital experiences</p>
-            <p class="first-secondary-text">Creating products and services that transform organizations for the digital economy</p>
-            <button type="button" class="see-work-button">See our work</button>
+                <p class="first-main-text">We craft meaningful digital experiences</p>
+                <p class="first-secondary-text">Creating products and services that transform organizations for the digital economy</p>
+                <button type="button" class="see-work-button">See our work</button>
+            </div>
         </div>
+        <div class="slide second">
+            <p class="second-main-text">interesting content</p>
         </div>
-        <div class="slide second"></div>
-        <div class="slide third"></div>
+        <div class="slide third">
+            <p class="third-main-text">some more interesting content</p>
+        </div>
     </div>
-
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-  <script src="script.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
